# zipfreeinfo

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: test_zipfreeinfo.py
zipfreeinfo/: __init__.py  exampleapp.py  pyproject.toml  zipfreeinfo.py
