[tool.poetry]
name = "zipfreeinfo"
version = "0.1.0"
description = ""
authors = ["Marcellus Easley <marcellus.easley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
sphinx = "4.0.2"
pip = "23.3"
watchdog = "^3.0.0"
flake8 = "^7.0.0"
wheel = "^0.42.0"
bumpversion = "^0.6.0"
cryptography = "^42.0.4"
pytest = "^8.0.0"
coverage = "^7.4.1"
tox = "^4.12.1"
pyyaml = "^6.0.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
